CONF: updating configs

--- a/tox.ini
+++ b/tox.ini
@@ -8,32 +8,35 @@ requires =
 
 description = run tests
 
+setenv =
+    devdeps: PIP_EXTRA_INDEX_URL =  https://pypi.anaconda.org/scientific-python-nightly-wheels/simple https://pypi.anaconda.org/astropy/simple
+
+
 deps =
     # We use these files to specify all the dependencies, and below we override
     # versions for specific testing schenarios
     -rtest_requirements.txt
-    -rsite/requirements.txt
-    -rrequirements.txt
+    -rsite_requirements.txt
+    -rtutorials/requirements.txt
 
     # TODO: add the oldest supported versions of all the dependencies here
     # oldestdeps: numpy==1.18
     # oldestdeps: matplotlib==3.1.2
     # oldestdeps: scipy==1.4
 
+    devdeps: astropy>0.0.dev0
+    devdeps: git+https://github.com/astropy/pyvo.git#egg=pyvo
+
 allowlist_externals = bash
 
 commands =
-    devdeps: pip install -U --pre --only-binary :all: -i https://pypi.anaconda.org/scipy-wheels-nightly/simple numpy
-    devdeps: pip install -U --pre --only-binary :all: -i https://pypi.anaconda.org/scipy-wheels-nightly/simple scipy
-    devdeps: pip install -U --pre --only-binary :all: -i https://pypi.anaconda.org/scipy-wheels-nightly/simple matplotlib
-
     pip freeze
 
     # Ignore testing the tutorials listed in ignore_testing file
-    !buildhtml: bash -c 'find content -name "*.md" | grep -vf ignore_testing | xargs jupytext --to notebook '
+    !buildhtml: bash -c 'find tutorials -name "*.md" | grep -vf ignore_testing | xargs jupytext --to notebook '
 
-    !buildhtml: pytest --nbval-lax --durations=10 content/
-    buildhtml: make -C site/ SPHINXOPTS="-nWT --keep-going" html
+    !buildhtml: pytest --nbval-lax --durations=10 tutorials
+    buildhtml: sphinx-build -b html . _build/html -D nb_execution_mode=auto -nWT --keep-going
 
 pip_pre =
     predeps: true
