--- a/tox.ini
+++ b/tox.ini
@@ -36,7 +36,7 @@ commands =
     !buildhtml: bash -c 'find tutorials -name "*.md" | grep -vf ignore_testing | xargs jupytext --to notebook '
 
     !buildhtml: pytest --nbval-lax --durations=10 tutorials
-    buildhtml: sphinx-build -b html . _build/html -D nb_execution_mode=auto -nWT --keep-going
+    buildhtml: sphinx-build -b html . _build/html -D nb_execution_mode=auto -nT --keep-going
 
 pip_pre =
     predeps: true
