--- a/tox.ini
+++ b/tox.ini
@@ -35,7 +35,7 @@ commands =
     # Ignore testing the tutorials listed in ignore_testing file
     !buildhtml: bash -c 'find tutorials -name "*.md" | grep -vf ignore_testing | xargs jupytext --to notebook '
 
-    !buildhtml: pytest --nbval-lax --durations=10 tutorials
+    !buildhtml: pytest --nbval-lax -vv --durations=10 tutorials
     buildhtml: sphinx-build -b html . _build/html -D nb_execution_mode=auto -nT --keep-going
 
 pip_pre =
