--- a/tutorials/requirements.txt
+++ b/tutorials/requirements.txt
@@ -10,8 +10,8 @@ pandas>=1.5.2
 dask[distributed]
 psutil
 s3fs
-firefly_client
-jupyter_firefly_extensions
+firefly-client
+jupyter-firefly-extensions
 # For supporting myst-based notebooks
 jupytext
 # For firefly-client packaging bug
