--- a/.github/workflows/ci_tests_run_notebooks.yml
+++ b/.github/workflows/ci_tests_run_notebooks.yml
@@ -46,4 +46,8 @@ jobs:
       run: python -m pip install --upgrade tox
 
     - name: Test with tox
-      run: tox ${{ matrix.toxargs }} -e ${{ matrix.toxenv }} -- ${{ matrix.toxposargs }}
+      run: |
+        # Workaround for OSX for https://jira.ipac.caltech.edu/browse/FIREFLY-1528
+        bash -c 'if echo ${{ runner.os }} | grep -i macos; then echo tutorials/firefly >> ignore_testing; fi'
+
+        tox ${{ matrix.toxargs }} -e ${{ matrix.toxenv }} -- ${{ matrix.toxposargs }}
