CI: cleanup OS dependent ignore testings

--- a/tox.ini
+++ b/tox.ini
@@ -32,7 +32,10 @@ allowlist_externals = bash
 commands =
     pip freeze
 
-    # Ignore testing the tutorials listed in ignore_testing file
+    # Ignore testing the tutorials listed in ignore_testing file. We have some OS specific ignores,
+    # too due to issues with e.g. multiprocessing and problems in upstream dependency
+    !buildhtml: bash -c 'if python -c "import platform; print(platform.platform())" | grep -i macos; then cat ignore_osx_testing >> ignore_testing; fi'
+    !buildhtml: bash -c 'if python -c "import platform; print(platform.platform())" | grep -i win; then cat ignore_windows_testing >> ignore_testing; fi'
     !buildhtml: bash -c 'find tutorials -name "*.md" | grep -vf ignore_testing | xargs jupytext --to notebook '
 
     !buildhtml: pytest --nbval-lax -vv --durations=10 tutorials
