--- a/tox.ini
+++ b/tox.ini
@@ -11,6 +11,7 @@ description = run tests
 setenv =
     devdeps: PIP_EXTRA_INDEX_URL =  https://pypi.anaconda.org/scientific-python-nightly-wheels/simple https://pypi.anaconda.org/astropy/simple
 
+passenv = CI, CIRCLECI
 
 deps =
     # We use these files to specify all the dependencies, and below we override
