--- a/tox.ini
+++ b/tox.ini
@@ -28,7 +28,7 @@ deps =
     devdeps: astropy>0.0.dev0
     devdeps: git+https://github.com/astropy/pyvo.git#egg=pyvo
 
-allowlist_externals = bash
+allowlist_externals = bash, sed
 
 commands =
     pip freeze
@@ -41,6 +41,8 @@ commands =
 
     !buildhtml: pytest --nbval-lax -vv --durations=10 tutorials
     buildhtml: sphinx-build -b html . _build/html -D nb_execution_mode=auto -nT --keep-going
+    # SED magic to remove the toctree captions from the rendered index page while keeping them in the sidebar TOC
+    buildhtml: sed -Ei '/caption-text/{N; s/.+caption-text.+\s<ul>/<ul>/; P;D}' _build/html/index.html
 
 pip_pre =
     predeps: true
