MAINT: making the command work with BSD sed, not just with the less fussy GNU one

--- a/tox.ini
+++ b/tox.ini
@@ -42,7 +42,8 @@ commands =
     !buildhtml: pytest --nbval-lax -vv --durations=10 tutorials
     buildhtml: sphinx-build -b html . _build/html -D nb_execution_mode=auto -nT --keep-going
     # SED magic to remove the toctree captions from the rendered index page while keeping them in the sidebar TOC
-    buildhtml: sed -Ei '/caption-text/{N; s/.+caption-text.+\s<ul>/<ul>/; P;D}' _build/html/index.html
+    buildhtml: sed -E -i.bak '/caption-text/{N; s/.+caption-text.+\n<ul>/<ul>/; P;D;}' _build/html/index.html
+    buildhtml: bash -c 'rm _build/html/index.html.bak'
 
 pip_pre =
     predeps: true
