--- a/tox.ini
+++ b/tox.ini
@@ -40,7 +40,7 @@ commands =
     !buildhtml: bash -c 'find tutorials -name "*.md" | grep -vf ignore_testing | xargs jupytext --to notebook '
 
     !buildhtml: pytest --nbval-lax -vv --durations=10 tutorials
-    buildhtml: sphinx-build -b html . _build/html -D nb_execution_mode=auto -nT --keep-going
+    buildhtml: sphinx-build -b html . _build/html -D nb_execution_mode=auto -nWT --keep-going
     # SED magic to remove the toctree captions from the rendered index page while keeping them in the sidebar TOC
     buildhtml: sed -E -i.bak '/caption-text/{N; s/.+caption-text.+\n<ul>/<ul>/; P;D;}' _build/html/index.html
     buildhtml: bash -c 'rm _build/html/index.html.bak'
