Moving requirements to a .binder directory

--- a/tox.ini
+++ b/tox.ini
@@ -18,7 +18,7 @@ deps =
     # versions for specific testing schenarios
     -rtest_requirements.txt
     -rsite_requirements.txt
-    -rtutorials/requirements.txt
+    -r.binder/requirements.txt
 
     # TODO: add the oldest supported versions of all the dependencies here
     # oldestdeps: numpy==1.18
