Add FIREFLY_URL to env for fallback

--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,7 @@ requires =
 description = run tests
 
 setenv =
+    FIREFLY_URL = https://irsa.ipac.caltech.edu/irsaviewer # fallback url for firefly notebooks if not defined in code
     devdeps: PIP_EXTRA_INDEX_URL =  https://pypi.anaconda.org/scientific-python-nightly-wheels/simple https://pypi.anaconda.org/astropy/simple
 
 passenv = CI, CIRCLECI
