--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    py{38,39,310}-test{,-oldestdeps,-devdeps,-predeps}{,-buildhtml}
+    py{310, 311, 312, 313}-test{,-oldestdeps,-devdeps,-predeps}{,-buildhtml}
 requires =
     pip >= 19.3.1
 
@@ -21,10 +21,18 @@ deps =
     -rsite_requirements.txt
     -r.binder/requirements.txt
 
-    # TODO: add the oldest supported versions of all the dependencies here
-    # oldestdeps: numpy==1.18
-    # oldestdeps: matplotlib==3.1.2
-    # oldestdeps: scipy==1.4
+    # Notebooks sets minimums for photutils, astroquery, sep, pyvo, pandas;
+    # the rest is indirect minimums for those
+    oldestdeps: numpy==1.24.0
+    oldestdeps: matplotlib==3.7.0
+    oldestdeps: scipy==1.10.0
+    oldestdeps: astropy==5.3.0
+    oldestdeps: photutils==2.0.0
+    oldestdeps: astroquery==0.4.10
+    oldestdeps: firefly_client==3.2.0
+    oldestdeps: sep==1.4.0
+    oldestdeps: pyvo==1.5.0
+    oldestdeps: pandas==1.5.2
 
     devdeps: astropy>0.0.dev0
     devdeps: git+https://github.com/astropy/pyvo.git#egg=pyvo
