--- a/tox.ini
+++ b/tox.ini
@@ -36,6 +36,7 @@ deps =
 
     devdeps: astropy>0.0.dev0
     devdeps: git+https://github.com/astropy/pyvo.git#egg=pyvo
+    devdeps: git+https://github.com/astropy/astroquery.git#egg=astroquery
 
 allowlist_externals = bash, sed
 
