--- a/.binder/requirements.txt
+++ b/.binder/requirements.txt
@@ -11,7 +11,7 @@ hpgeom
 pandas>=1.5.2
 dask[distributed]
 psutil
-ray
+ray ; python_version < "3.13"
 s3fs
 firefly-client>=3.2.0
 jupyter-firefly-extensions
