--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ setenv =
     FIREFLY_URL = https://irsa.ipac.caltech.edu/irsaviewer # fallback url for firefly notebooks if not defined in code
     devdeps: PIP_EXTRA_INDEX_URL =  https://pypi.anaconda.org/scientific-python-nightly-wheels/simple https://pypi.anaconda.org/astropy/simple
 
-passenv = CI, CIRCLECI
+passenv = CI, CIRCLECI, IS_PR
 
 deps =
     # We use these files to specify all the dependencies, and below we override
@@ -49,8 +49,11 @@ commands =
     !buildhtml: bash -c 'if python -c "import platform; print(platform.platform())" | grep -i win; then cat ignore_windows_testing >> ignore_testing; fi'
     # ray is not yet python 3.13 compatible
     !buildhtml: bash -c 'if python -c "import sys; print(sys.version)" | grep 3.13; then echo Parallelize_Convolution.md >> ignore_testing; fi'
+
     !buildhtml: bash -c 'if [[ $CI == true ]]; then cat ignore_gha_testing >> ignore_testing; fi'
-    !buildhtml: bash -c 'find tutorials -name "*.md" | grep -vf ignore_testing | xargs jupytext --to notebook '
+
+    # We only want to run CI in PRs for the notebooks we touched
+    !buildhtml: bash -c 'if [[ $GITHUB_EVENT_NAME == pull_request ]]; then git diff origin/main --name-only tutorials | grep .md; else find tutorials -name "*.md"; fi | grep -vf ignore_testing | xargs jupytext --to notebook '
 
     !buildhtml: pytest --nbval-lax -vv --durations=10 tutorials
     buildhtml: sphinx-build -b html . _build/html -D nb_execution_mode=auto -nWT --keep-going
