--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ setenv =
     FIREFLY_URL = https://irsa.ipac.caltech.edu/irsaviewer # fallback url for firefly notebooks if not defined in code
     devdeps: PIP_EXTRA_INDEX_URL =  https://pypi.anaconda.org/scientific-python-nightly-wheels/simple https://pypi.anaconda.org/astropy/simple
 
-passenv = CI, CIRCLECI, IS_PR
+passenv = CI, CIRCLECI, GITHUB_EVENT_NAME
 
 deps =
     # We use these files to specify all the dependencies, and below we override
