DEP: adding jupyterlab-myst as dependency, so we have nice boxes when working with content as notebooks

--- a/.binder/requirements.txt
+++ b/.binder/requirements.txt
@@ -21,3 +21,5 @@ fsspec
 sep>=1.4
 # For supporting myst-based notebooks
 jupytext
+# Making admonotions look nice for the myst notebooks
+jupyterlab-myst
