Add pyerfa>=2.0.1.3 to binder requirements.txt. Needed for numpy>=2.0.

--- a/.binder/requirements.txt
+++ b/.binder/requirements.txt
@@ -21,6 +21,7 @@ fsspec
 sep>=1.4
 hats>=0.5
 lsdb>=0.5
+pyerfa>=2.0.1.3
 # For supporting myst-based notebooks
 jupytext
 # Making admonotions look nice for the myst notebooks
