Add pyerfa>=2.0.1.3 to binder requirements.txt. Needed for numpy>=2.0.

--- a/.binder/requirements.txt
+++ b/.binder/requirements.txt
@@ -25,6 +25,7 @@ h5py
 requests
 hats>=0.5.2
 lsdb>=0.5.2
+pyerfa>=2.0.1.3
 # For supporting myst-based notebooks
 jupytext
 # Making admonotions look nice for the myst notebooks
