--- a/tox.ini
+++ b/tox.ini
@@ -56,7 +56,7 @@ commands =
     !buildhtml: bash -c 'if [[ $GITHUB_EVENT_NAME == pull_request && -z "$(grep force_run:all_tests ${GITHUB_EVENT_PATH})" ]]; then git fetch origin main --depth=1; git diff origin/main --name-only tutorials | grep .md; else find tutorials -name "*.md"; fi | grep -vf ignore_testing | xargs jupytext --to notebook '
 
     !buildhtml: pytest --nbval-lax -vv --suppress-no-test-exit-code --durations=10 tutorials
-    buildhtml: sphinx-build -b html . _build/html -D nb_execution_mode=auto -nWT --keep-going
+    buildhtml: sphinx-build -b html . _build/html -nWT --keep-going
     # SED magic to remove the toctree captions from the rendered index page while keeping them in the sidebar TOC
     buildhtml: sed -E -i.bak '/caption-text/{N; s/.+caption-text.+\n<ul>/<ul>/; P;D;}' _build/html/index.html
     buildhtml: bash -c 'rm _build/html/index.html.bak'
