--- a/tox.ini
+++ b/tox.ini
@@ -23,7 +23,7 @@ deps =
 
     # Notebooks sets minimums for photutils, astroquery, sep, pyvo, pandas;
     # the rest is indirect minimums for those
-    oldestdeps: numpy==1.24.0
+    oldestdeps: numpy==2.0.0
     oldestdeps: matplotlib==3.7.0
     oldestdeps: scipy==1.10.0
     oldestdeps: astropy==5.3.0
@@ -33,6 +33,8 @@ deps =
     oldestdeps: sep==1.4.0
     oldestdeps: pyvo==1.5.0
     oldestdeps: pandas==1.5.2
+    oldestdeps: lsdb==0.5.2
+    oldestdeps: hats==0.5.2
 
     devdeps: astropy>0.0.dev0
     devdeps: git+https://github.com/astropy/pyvo.git#egg=pyvo
