--- a/tox.ini
+++ b/tox.ini
@@ -23,18 +23,25 @@ deps =
 
     # Notebooks sets minimums for photutils, astroquery, sep, pyvo, pandas;
     # the rest is indirect minimums for those
+    # Required by hats
     oldestdeps: numpy==2.0.0
-    oldestdeps: matplotlib==3.7.0
-    oldestdeps: scipy==1.10.0
-    oldestdeps: astropy==5.3.0
+    # Required by hats
+    oldestdeps: matplotlib==3.10.3
+    # For numpy 2.0 compatibility
+    oldestdeps: scipy==1.13.0
+    # Required by hats
+    oldestdeps: astropy==6.1.5
     oldestdeps: photutils==2.0.0
     oldestdeps: astroquery==0.4.10
     oldestdeps: firefly_client==3.2.0
     oldestdeps: sep==1.4.0
     oldestdeps: pyvo==1.5.0
-    oldestdeps: pandas==1.5.2
+    # Required by nested-pandas (indirectly by hats)
+    oldestdeps: pandas==2.2.3
     oldestdeps: lsdb==0.5.2
     oldestdeps: hats==0.5.2
+    # Non-direct dependency, required by hats
+    oldestdeps: nested-pandas==0.4.1
 
     devdeps: astropy>0.0.dev0
     devdeps: git+https://github.com/astropy/pyvo.git#egg=pyvo
