ENH: gutting out landing page, adding some more metadata

--- a/myst.yml
+++ b/myst.yml
@@ -2,9 +2,9 @@
 version: 1
 project:
   title: IRSA Tutorials
-  # description:
-  # keywords: []
-  # authors: []
+  description: IRSA Python Notebook tutorials to demostrate accessing data served by the NASA/IPAC Infrared Science Archive (IRSA)
+  keywords: [astronomy]
+  authors: [IRSA Scientists and Developers]
   github: https://github.com/Caltech-IPAC/irsa-tutorials/
   toc:
     - title: IRSA Tutorials
