--- a/myst.yml
+++ b/myst.yml
@@ -2,6 +2,7 @@
 version: 1
 project:
   title: IRSA Tutorials
+  subject: IRSA Tutorials
   description: IRSA Python Notebook tutorials to demostrate accessing data served by the NASA/IPAC Infrared Science Archive (IRSA)
   keywords: [astronomy]
   authors: [IRSA Scientists and Developers]
