ENH: restructure TOC

--- a/toc.yml
+++ b/toc.yml
@@ -3,22 +3,9 @@ project:
   toc:
     - title: IRSA Tutorials
       file: index.md
-    - title: VO on-prem data access
+    - title: SPHEREx
       children:
-        - file: tutorials/irsa-sia-examples/sia_2mass_allsky.md
-        - file: tutorials/irsa-sia-examples/sia_allwise_atlas.md
-        - file: tutorials/irsa-sia-examples/sia_cosmos.md
-        - file: tutorials/irsa-sia-examples/siav2_seip.md
-        - file: tutorials/cosmodc2/cosmoDC2_TAP_access.md
-    - title: Cloud data access
-      children:
-        - file: tutorials/cloud_access/cloud-access-intro.md
-        - file: tutorials/parquet-catalog-demos/wise-allwise-catalog-demo.md
-        - file: tutorials/parquet-catalog-demos/neowise-source-table-strategies.md
-        - file: tutorials/parquet-catalog-demos/neowise-source-table-lightcurves.md
-        - file: tutorials/openuniversesims/openuniverse2024_roman_simulated_timedomainsurvey.md
-        - file: tutorials/openuniversesims/openuniverse2024_roman_simulated_wideareasurvey.md
-        - file: tutorials/cloud_access/euclid-cloud-access.md
+        - file: tutorials/spherex/spherex_intro.md
     - title: Euclid
       children:
         - title: Euclid Early Release Observations
@@ -32,17 +19,43 @@ project:
             - file: tutorials/euclid_access/4_Euclid_intro_PHZ_catalog.md
             - file: tutorials/euclid_access/5_Euclid_intro_SPE_catalog.md
             - file: tutorials/cloud_access/euclid-cloud-access.md
-    - title: SPHEREx
+    - title: WISE
       children:
-        - file: tutorials/spherex/spherex_intro.md
-    - title: Visualizations with Firefly
+        - title: AllWISE
+          children:
+            - file: tutorials/irsa-sia-examples/sia_allwise_atlas.md
+            - file: tutorials/parquet-catalog-demos/wise-allwise-catalog-demo.md
+        - title: NEOWISE
+          children:
+            - file: tutorials/firefly/NEOWISE_light_curve_demo.md
+            - file: tutorials/parquet-catalog-demos/neowise-source-table-strategies.md
+            - file: tutorials/parquet-catalog-demos/neowise-source-table-lightcurves.md
+    - title: Spitzer
       children:
-        - file: tutorials/firefly/SEDs_in_Firefly.md
-        - file: tutorials/firefly/NEOWISE_light_curve_demo.md
-        - file: tutorials/firefly/OpenUniverse2024Preview_Firefly.md
+        - title: Spitzer Enhanced Imaging Products (SEIP)
+          children:
+            - file: tutorials/irsa-sia-examples/siav2_seip.md
+    - title: 2MASS
+      children:
+        - file: tutorials/irsa-sia-examples/sia_2mass_allsky.md
+    - title: COSMOS
+      children:
+        - file: tutorials/irsa-sia-examples/sia_cosmos.md
     - title: Simulated Data
       children:
-        - file: tutorials/roman_simulations/roman_hlss_number_density.md
-    - title: Generic techniques
+        - title: Roman HLSS Galaxy Mock Catalog
+          children:
+            - file: tutorials/roman_simulations/roman_hlss_number_density.md
+        - title: OpenUniverse 2024
+          children:
+            - file: tutorials/openuniversesims/openuniverse2024_roman_simulated_wideareasurvey.md
+            - file: tutorials/firefly/OpenUniverse2024Preview_Firefly.md
+            - file: tutorials/openuniversesims/openuniverse2024_roman_simulated_timedomainsurvey.md
+        - title: CosmoDC2
+          children:
+            - file: tutorials/cosmodc2/cosmoDC2_TAP_access.md
+    - title: Special Topics
       children:
+        - file: tutorials/cloud_access/cloud-access-intro.md
+        - file: tutorials/firefly/SEDs_in_Firefly.md
         - file: tutorials/parallelize/Parallelize_Convolution.md
