--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ setenv =
     FIREFLY_URL = https://irsa.ipac.caltech.edu/irsaviewer # fallback url for firefly notebooks if not defined in code
     devdeps: PIP_EXTRA_INDEX_URL =  https://pypi.anaconda.org/scientific-python-nightly-wheels/simple https://pypi.anaconda.org/astropy/simple
 
-passenv = CI, CIRCLECI, GITHUB_EVENT_NAME, GITHUB_EVENT_PATH
+passenv = CI, CIRCLECI, GITHUB_EVENT_NAME, GITHUB_EVENT_PATH, BASE_URL
 
 deps =
     # We use these files to specify all the dependencies, and below we override
@@ -38,7 +38,7 @@ deps =
     devdeps: git+https://github.com/astropy/pyvo.git#egg=pyvo
     devdeps: git+https://github.com/astropy/astroquery.git#egg=astroquery
 
-allowlist_externals = bash, sed
+allowlist_externals = bash, sed, npx
 
 commands =
     pip freeze
@@ -54,10 +54,9 @@ commands =
     !buildhtml: bash -c 'if [[ $GITHUB_EVENT_NAME == pull_request && -z "$(grep force_run:all_tests ${GITHUB_EVENT_PATH})" ]]; then git fetch origin main --depth=1; git diff origin/main --name-only tutorials | grep .md; else find tutorials -name "*.md"; fi | grep -vf ignore_testing | xargs jupytext --to notebook '
 
     !buildhtml: pytest --nbval-lax -vv --suppress-no-test-exit-code --durations=10 tutorials
-    buildhtml: sphinx-build -b html . _build/html -nWT --keep-going
-    # SED magic to remove the toctree captions from the rendered index page while keeping them in the sidebar TOC
-    buildhtml: sed -E -i.bak '/caption-text/{N; s/.+caption-text.+\n<ul>/<ul>/; P;D;}' _build/html/index.html
-    buildhtml: bash -c 'rm _build/html/index.html.bak'
+
+    buildhtml: npx myst build --execute
+    buildhtml: bash rm _build/html/*thebe*.js
 
 pip_pre =
     predeps: true
