--- a/tox.ini
+++ b/tox.ini
@@ -45,16 +45,16 @@ commands =
 
     # Ignore testing the tutorials listed in ignore_testing file. We have some OS specific ignores,
     # too due to issues with e.g. multiprocessing and problems in upstream dependency
-    !buildhtml: bash -c 'if python -c "import platform; print(platform.platform())" | grep -i macos; then cat ignore_osx_testing >> ignore_testing; fi'
-    !buildhtml: bash -c 'if python -c "import platform; print(platform.platform())" | grep -i win; then cat ignore_windows_testing >> ignore_testing; fi'
-
-    !buildhtml: bash -c 'if [[ $CI == true ]]; then cat ignore_gha_testing >> ignore_testing; fi'
+    bash -c 'if python -c "import platform; print(platform.platform())" | grep -i macos; then cat ignore_osx_testing >> ignore_testing; fi'
+    bash -c 'if python -c "import platform; print(platform.platform())" | grep -i win; then cat ignore_windows_testing >> ignore_testing; fi'
+    bash -c 'if [[ $CI == true ]]; then cat ignore_gha_testing >> ignore_testing; fi'
 
     # We only want to run CI in PRs for the notebooks we touched
     !buildhtml: bash -c 'if [[ $GITHUB_EVENT_NAME == pull_request && -z "$(grep force_run:all_tests ${GITHUB_EVENT_PATH})" ]]; then git fetch origin main --depth=1; git diff origin/main --name-only tutorials | grep .md; else find tutorials -name "*.md"; fi | grep -vf ignore_testing | xargs jupytext --to notebook '
 
     !buildhtml: pytest --nbval-lax -vv --suppress-no-test-exit-code --durations=10 tutorials
 
+    buildhtml: bash -c "find tutorials -name '*md' | grep -f ignore_testing | sort | uniq | xargs -n 1 sed -i '' -e 's|name: python3|name: python3\nskip_execution: true|g'"
     buildhtml: npx myst build --execute
     buildhtml: bash rm _build/html/*thebe*.js
 
