Fix the sed -i logic for ubuntu as it doesn't take an empty extension

--- a/tox.ini
+++ b/tox.ini
@@ -38,7 +38,7 @@ deps =
     devdeps: git+https://github.com/astropy/pyvo.git#egg=pyvo
     devdeps: git+https://github.com/astropy/astroquery.git#egg=astroquery
 
-allowlist_externals = bash, sed, npx
+allowlist_externals = bash, npx
 
 commands =
     pip freeze
@@ -54,7 +54,9 @@ commands =
 
     !buildhtml: pytest --nbval-lax -vv --suppress-no-test-exit-code --durations=10 tutorials
 
-    buildhtml: bash -c "find tutorials -name '*md' | grep -f ignore_testing | sort | uniq | xargs -n 1 sed -i '' -e 's|name: python3|name: python3\nskip_execution: true|g'"
+    # sed -i needs a bit of hacky conditional on ubuntu to cover the case of an empty ignore
+    buildhtml: bash -c "find tutorials -name '*md' | grep -f ignore_testing | sort | uniq > ignore_execute; if [ -s ignore_execute ]; then cat ignore_execute | xargs -n 1 sed -i -e 's|name: python3|name: python3\nskip_execution: true|g';fi"
+
     buildhtml: npx myst build --execute
     buildhtml: bash rm _build/html/*thebe*.js
 
