--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,6 +39,7 @@ jobs:
 
       - run:
           name: Build documentation
+          no_output_timeout: 60m
           environment:
             # Ensure this is same as store_artifacts path below
             DOCS_PATH: _build/html
