--- a/.github/workflows/ci_publish.yml
+++ b/.github/workflows/ci_publish.yml
@@ -1,4 +1,4 @@
-name: Publish HTML
+name: Build and Publish HTML and deployed_notebooks
 
 on:
   push:
@@ -14,7 +14,7 @@ concurrency:
 
 jobs:
 
-  publish:
+  publish_html:
     if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
     name: Publish HTML
     runs-on: ubuntu-latest
@@ -29,7 +29,7 @@ jobs:
       - name: Install dependencies
         run: python -m pip install --upgrade tox
 
-      - name: Execute notebooks as testing
+      - name: Execute notebooks while building HTMLs
         run: tox -e py311-buildhtml
 
       - name: Publish
@@ -38,3 +38,22 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./_build/html/
           commit_message: ${{ github.event.head_commit.message }}
+
+  deploy_notebooks:
+    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
+    name: Deploy deployed_notebook branch
+    runs-on: ubuntu-latest
+    needs: publish_html
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Deploy to deployed_notebooks branch
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          gith=$(git rev-parse HEAD)
+          git checkout --orphan deployed_notebooks
+          git rm --cached -r .
+          git add --pathspec-from-file=deployed_notebooks_manifest.in --force
+          git commit -m "Deploy notebooks for commit ${gith}"
+          git push origin deployed_notebooks --force
