--- a/tox.ini
+++ b/tox.ini
@@ -56,8 +56,7 @@ commands =
 
     # sed -i needs a bit of hacky conditional on ubuntu to cover the case of an empty ignore
     buildhtml: bash -c "find tutorials -name '*md' | grep -f ignore_testing | sort | uniq > ignore_execute; if [ -s ignore_execute ]; then cat ignore_execute | xargs -n 1 sed -i -e 's|name: python3|name: python3\nskip_execution: true|g';fi"
-
-    buildhtml: npx myst build --execute
+    buildhtml: npx myst build --execute --html
     buildhtml: bash rm _build/html/*thebe*.js
 
 pip_pre =
