CI: ignore lsdb notebooks for oldestdeps testing

--- a/tox.ini
+++ b/tox.ini
@@ -52,6 +52,9 @@ commands =
     bash -c 'if [[ $CI == true ]]; then cat ignore_tutorials/ignore_gha_testing >> ignore_testing; fi'
     bash -c 'if [[ $CIRCLECI == true ]]; then cat ignore_tutorials/ignore_circleci_testing >> ignore_testing; fi'
 
+    # lsdb has tighter minimum dependencies, deal with it here for now, long term handle it from the notebook metadata
+    oldestdeps: bash -c 'echo tutorials/parquet-catalog-demos/irsa-hats-with-lsdb >> ignore_testing'
+
     buildhtml: bash -c 'cat ignore_tutorials/ignore_rendering >> ignore_testing'
 
     # We only want to run CI in PRs for the notebooks we touched
