--- a/tox.ini
+++ b/tox.ini
@@ -40,6 +40,16 @@ deps =
 
 allowlist_externals = bash, jupyter-book
 
+
+install_command =
+    # lsdb has tighter minimum dependencies, deal with it here for now, long term handle it from the notebook metadata
+    # We need to do this here before the dependencies are installed to work around deps conflicts
+    oldestdeps: bash -c "echo tutorials/parquet-catalog-demos/irsa-hats-with-lsdb >> ignore_testing; sed -i -e 's|lsdb|\#lsdb|g' .binder/requirements.txt && python -I -m pip install $@"
+
+    # Adding back the default install command
+    !oldestdeps: python -I -m pip install {opts} {packages}
+
+
 commands =
     pip freeze
 
@@ -51,9 +61,6 @@ commands =
     bash -c 'if python -c "import platform; print(platform.platform())" | grep -i win; then cat ignore_tutorials/ignore_windows_testing >> ignore_testing; fi'
     bash -c 'if [[ $CI == true ]]; then cat ignore_tutorials/ignore_gha_testing >> ignore_testing; fi'
     bash -c 'if [[ $CIRCLECI == true ]]; then cat ignore_tutorials/ignore_circleci_testing >> ignore_testing; fi'
-
-    # lsdb has tighter minimum dependencies, deal with it here for now, long term handle it from the notebook metadata
-    oldestdeps: bash -c 'echo tutorials/parquet-catalog-demos/irsa-hats-with-lsdb >> ignore_testing'
 
     buildhtml: bash -c 'cat ignore_tutorials/ignore_rendering >> ignore_testing'
 
