--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,7 @@ jobs:
             DOCS_PATH: _build/html
           command: |
             export BASE_URL="/output/job/$CIRCLE_WORKFLOW_JOB_ID/artifacts/0/$DOCS_PATH"
-
+            export OMP_NUM_THREADS=1
             python -m tox -e py312-buildhtml
 
       - save_cache:
