--- a/tox.ini
+++ b/tox.ini
@@ -38,7 +38,7 @@ deps =
     devdeps: git+https://github.com/astropy/pyvo.git#egg=pyvo
     devdeps: git+https://github.com/astropy/astroquery.git#egg=astroquery
 
-allowlist_externals = bash, npx
+allowlist_externals = bash, jupyter-book
 
 commands =
     pip freeze
@@ -58,7 +58,8 @@ commands =
     # sed -i needs a bit of hacky conditional on ubuntu to cover the case of an empty ignore
     buildhtml: bash -c "find tutorials -name '*md' | grep -f ignore_testing | sort | uniq > ignore_execute; if [ -s ignore_execute ]; then cat ignore_execute | xargs -n 1 sed -i -e 's|name: python3|name: python3\nskip_execution: true|g';fi"
 
-    buildhtml: npx myst build --execute --html
+
+    buildhtml: jupyter-book build --execute --html
     buildhtml: bash -c "rm _build/html/*thebe*.js"
 
 pip_pre =
