CI: new ignore file for those that fail rendering even on GHA

--- a/tox.ini
+++ b/tox.ini
@@ -50,6 +50,8 @@ commands =
     bash -c 'if [[ $CI == true ]]; then cat ignore_gha_testing >> ignore_testing; fi'
     bash -c 'if [[ $CIRCLECI == true ]]; then cat ignore_circleci_testing >> ignore_testing; fi'
 
+    buildhtml: bash -c "cat ignore_rendenring >> ignore_testing"
+
     # We only want to run CI in PRs for the notebooks we touched
     !buildhtml: bash -c 'if [[ $GITHUB_EVENT_NAME == pull_request && -z "$(grep force_run:all_tests ${GITHUB_EVENT_PATH})" ]]; then git fetch origin main --depth=1; git diff origin/main --name-only tutorials | grep .md; else find tutorials -name "*.md"; fi | grep -vf ignore_testing | xargs jupytext --to notebook '
 
