MAINT: reorganise ignore testing files

--- a/tox.ini
+++ b/tox.ini
@@ -43,17 +43,19 @@ allowlist_externals = bash, jupyter-book
 commands =
     pip freeze
 
-    # Ignore testing the tutorials listed in ignore_testing file. We have some OS specific ignores,
-    # too due to issues with e.g. multiprocessing and problems in upstream dependency
-    bash -c 'if python -c "import platform; print(platform.platform())" | grep -i macos; then cat ignore_osx_testing >> ignore_testing; fi'
-    bash -c 'if python -c "import platform; print(platform.platform())" | grep -i win; then cat ignore_windows_testing >> ignore_testing; fi'
-    bash -c 'if [[ $CI == true ]]; then cat ignore_gha_testing >> ignore_testing; fi'
-    bash -c 'if [[ $CIRCLECI == true ]]; then cat ignore_circleci_testing >> ignore_testing; fi'
+    # Ignore some tutorials for various types of testing. The individual lists are stored in the `ignore_tutorials`
+    # directory and are documented about the specific reasons of them included in the ignores. These files are kept under version control.
+    # The files `ignore_testing` and `ignore_execution` are generated during the CI jobs and are not under version control.
+    bash -c 'cat ignore_tutorials/ignore_all_testing >> ignore_testing'
+    bash -c 'if python -c "import platform; print(platform.platform())" | grep -i macos; then cat ignore_tutorials/ignore_osx_testing >> ignore_testing; fi'
+    bash -c 'if python -c "import platform; print(platform.platform())" | grep -i win; then cat ignore_tutorials/ignore_windows_testing >> ignore_testing; fi'
+    bash -c 'if [[ $CI == true ]]; then cat ignore_tutorials/ignore_gha_testing >> ignore_testing; fi'
+    bash -c 'if [[ $CIRCLECI == true ]]; then cat ignore_tutorials/ignore_circleci_testing >> ignore_testing; fi'
 
-    buildhtml: bash -c "cat ignore_rendenring >> ignore_testing"
+    buildhtml: bash -c 'cat ignore_tutorials/ignore_rendering >> ignore_testing'
 
     # We only want to run CI in PRs for the notebooks we touched
-    !buildhtml: bash -c 'if [[ $GITHUB_EVENT_NAME == pull_request && -z "$(grep force_run:all_tests ${GITHUB_EVENT_PATH})" ]]; then git fetch origin main --depth=1; git diff origin/main --name-only tutorials | grep .md; else find tutorials -name "*.md"; fi | grep -vf ignore_testing | xargs jupytext --to notebook '
+    !buildhtml: bash -c 'if [[ $GITHUB_EVENT_NAME == pull_request && -z "$(grep force_run:all_tests ${GITHUB_EVENT_PATH})" ]]; then git fetch origin main --depth=1; git diff origin/main --name-only tutorials | grep .md; else find tutorials -name "*.md"; fi | grep -vf ignore_testing/ignore_testing | xargs jupytext --to notebook '
 
     !buildhtml: pytest --nbval-lax -vv --suppress-no-test-exit-code --durations=10 tutorials
 
