--- a/.binder/requirements.txt
+++ b/.binder/requirements.txt
@@ -13,6 +13,7 @@ hpgeom
 pandas>=1.5.2
 dask[distributed]
 lsdb>=0.6.4
+# indirect dependency workaround until https://github.com/astronomy-commons/lsdb/issues/1047 is resolved and picked up as out minimum version
 universal_pathlib<0.3
 psutil
 ray
