--- a/tox.ini
+++ b/tox.ini
@@ -72,9 +72,8 @@ commands =
     # sed -i needs a bit of hacky conditional on ubuntu to cover the case of an empty ignore
     buildhtml: bash -c "find tutorials -name '*md' | grep -f ignore_testing | sort | uniq > ignore_execute; if [ -s ignore_execute ]; then cat ignore_execute | xargs -n 1 sed -i -e 's|name: python3|name: python3\nskip_execution: true|g';fi"
 
-    # Status check is a workaround until https://github.com/jupyter-book/mystmd/issues/2113 is fixed
-    buildhtml: bash -c "jupyter-book build --execute --html 2>&1 | tee /tmp/mystbuild.log"
-    buildhtml: bash -c "if grep -q 'Traceback .most recent call last.' /tmp/mystbuild.log; then exit 1; fi"
+    # Using srtict so we fail with trackbacks and debug mode to have a richer log
+    buildhtml: bash -c "npx myst build --execute --html --strict -d"
 
 pip_pre =
     predeps: true
