MAINT: back to use jupyter-book

--- a/tox.ini
+++ b/tox.ini
@@ -75,7 +75,7 @@ commands =
 
     buildhtml: bash -c "echo 'Notebooks ignored (not tested/executed) in this job:\n'; cat ignore_execute"
     # Using srtict so we fail with trackbacks and debug mode to have a richer log
-    buildhtml: bash -c "npx myst build --execute --html --strict -d"
+    buildhtml: bash -c "jupyter-book build --execute --html --strict -d"
 
 pip_pre =
     predeps: true
