--- a/.github/workflows/ci_tests_run_notebooks.yml
+++ b/.github/workflows/ci_tests_run_notebooks.yml
@@ -24,6 +24,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
+      max-parallel: 1
       matrix:
         # Run all supported OS for one Python version, then add a few extra scenarios
         os: [ubuntu-latest, macos-latest, windows-latest]
