--- a/.github/workflows/ci_tests_run_notebooks.yml
+++ b/.github/workflows/ci_tests_run_notebooks.yml
@@ -60,9 +60,13 @@ jobs:
   gha_buildhtml:
     # When label is used, we do run buildhtml on GHA to check if the publishing job will run or not.
     # Use in case when new content has run into troubles on CircleCI.
+    # Note that we run this job once the tests job is done.
     if: >-
+      ${{ !cancelled() }} &&
       ((github.event_name == 'pull_request') && contains(github.event.pull_request.labels.*.name, 'GHA buildhtml') || (github.event_name == 'schedule')) &&
       github.repository == 'Caltech-IPAC/irsa-tutorials'
+    needs: tests
+
     name: Buildhtml testing
     runs-on: ubuntu-latest
     steps:
