CI: fixing oldestdeps consistencies

--- a/tox.ini
+++ b/tox.ini
@@ -33,6 +33,8 @@ deps =
     oldestdeps: sep==1.4.0
     oldestdeps: pyvo==1.5.0
     oldestdeps: pandas==1.5.2
+    # Oldest lsdb is not compatible with the versions above, we skip lsdb notebooks for oldestdeps job
+    # oldestdeps: lsdb==0.6.6
 
     devdeps: astropy>0.0.dev0
     devdeps: git+https://github.com/astropy/pyvo.git#egg=pyvo
