MAINT: don't hide requirements list in a hidden directory

--- a/tox.ini
+++ b/tox.ini
@@ -19,7 +19,7 @@ deps =
     # versions for specific testing schenarios
     -rtest_requirements.txt
     -rsite_requirements.txt
-    -r.binder/requirements.txt
+    -rtutorial_requirements.txt
 
     # Notebooks sets minimums for photutils, astroquery, sep, pyvo, pandas;
     # the rest is indirect minimums for those
@@ -44,7 +44,7 @@ allowlist_externals = bash
 install_command =
     # lsdb has tighter minimum dependencies, deal with it here for now, long term handle it from the notebook metadata
     # We need to do this here before the dependencies are installed to work around deps conflicts
-    oldestdeps: bash -c "echo tutorials/parquet-catalog-demos/irsa-hats-with-lsdb >> ignore_testing; sed -i -e 's|lsdb|\#lsdb|g' .binder/requirements.txt && python -I -m pip install $@"
+    oldestdeps: bash -c "echo tutorials/parquet-catalog-demos/irsa-hats-with-lsdb >> ignore_testing; sed -i -e 's|lsdb|\#lsdb|g' tutorial_requirements.txt && python -I -m pip install $@"
 
     # Adding back the default install command
     !oldestdeps: python -I -m pip install {opts} {packages}
