CI: fix frontmatter regex for skipping tutorials execution

--- a/tox.ini
+++ b/tox.ini
@@ -71,7 +71,7 @@ commands =
     !buildhtml: pytest --nbval-lax -vv --suppress-no-test-exit-code --durations=10 tutorials
 
     # sed -i needs a bit of hacky conditional on ubuntu to cover the case of an empty ignore
-    buildhtml: bash -c "find tutorials -name '*md' | grep -f ignore_testing | sort | uniq > ignore_execute; if [ -s ignore_execute ]; then cat ignore_execute | xargs -n 1 sed -i -e 's|name: python3|name: python3\nskip_execution: true|g';fi"
+    buildhtml: bash -c 'find tutorials -name "*md" | grep -f ignore_testing | sort | uniq > ignore_execute; if [ -s ignore_execute ]; then for name in $(cat ignore_execute); do if [ -z "$(head -n 20 ${name}| grep execute:)" ]; then sed -i -e "s|kernelspec:|execute:\n  skip: true\nkernelspec:|g" ${name}; fi; done;fi'
 
     buildhtml: bash -c "echo 'Notebooks ignored (not tested/executed) in this job:\n'; cat ignore_execute"
     # Using srtict so we fail with trackbacks and debug mode to have a richer log
