MAINT: fix up logic for no matching case

--- a/tox.ini
+++ b/tox.ini
@@ -64,17 +64,20 @@ commands =
 
     buildhtml: bash -c 'cat ignore_tutorials/ignore_rendering_execution >> ignore_testing'
 
-    # Make a list of the tutorials changes
-    bash -c 'if [[ $GITHUB_EVENT_NAME == pull_request && -z "$(grep force_run:all_tests ${GITHUB_EVENT_PATH})" ]]; then git fetch origin main --depth=1; git diff origin/main --name-only tutorials | grep .md; else find tutorials -name "*.md"; fi | grep -vf ignore_testing > changed_tutorials'
+    # Make a list of all the tutorials to be reused in multiple filtering commands below
+    bash -c 'find tutorials -name "*md" > all_tutorials'
 
-    # We only want to run CI in PRs for the notebooks we touched
-    !buildhtml: bash -c 'cat changed_tutorials | xargs jupytext --to notebook '
+    # Make a list of the tutorials changed, we only need this in CI. At the end get rid of grep's return code for null match
+    bash -c 'if [[ $CI == true ]]; then git fetch origin main --depth=1; git diff origin/main --name-only tutorials | grep .md; else cat all_tutorials; fi | grep -vf ignore_testing || true > changed_tutorials'
+
+    # We only skip testing untouched tutorials in PRs; in cron and dispatch all should be tested
+    !buildhtml: bash -c 'if [[ $GITHUB_EVENT_NAME == pull_request && -z "$(grep force_run:all_tests ${GITHUB_EVENT_PATH})" ]]; then cat changed_tutorials; else cat all_tutorials; fi | xargs jupytext --to notebook '
 
     !buildhtml: bash -c "echo 'Notebooks ignored (not tested/executed) in this job:\n'; cat ignore_testing"
     !buildhtml: pytest --nbval-lax -vv --suppress-no-test-exit-code --durations=10 tutorials
 
     # We don't want to execute in rendering the ones we ignore for testing
-    buildhtml: bash -c 'find tutorials -name "*md" > all_tutorials; grep -f ignore_testing all_tutorials > ignore_execute'
+    buildhtml: bash -c 'grep -f ignore_testing all_tutorials > ignore_execute'
 
     # On CircleCI rendering preview, we also don't want to execute anything that hasn't been modified
     buildhtml: bash -c 'if [[ $CIRCLECI == true ]]; then grep -vf changed_tutorials all_tutorials >> ignore_execute; fi'
